fixed overflow issue

--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -22,10 +22,11 @@
 .mainContainer {
   width: 916px;
   height: auto;
+  overflow: auto;
+
   background-color: rgba(255, 255, 255, 0.9);
   padding: 20px 10px;
   margin: 0 4px;
   color: #000;
-
   border-radius: 2px;
 }
